2010-09-14  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/main.c:
   Ignore directories passed on the command-line (based on patch by
   Erik de Castro Lopo, thanks).


2010-09-13  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, src/keybindings.c, src/ui_utils.c, geany.glade:
   Remove 3 popup menu items to save space:
   Find Document Usage because Find Usage can be used instead.
   Go to Tag Declaration because Go to Tag Definition is more common.
   Go to Line because the toolbar item can be used instead.
 * src/tools.c, src/search.c, tagmanager/python.c:
   Fix some 'possible' NULL pointer dereferences (based on patch by
   Erik de Castro Lopo).
 * src/keybindings.c, src/keybindings.h, src/prefs.c:
   Simplify keybindings_check_event().


2010-09-09  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/build.c:
   Use up/down icons for Previous/Next Error.
 * src/interface.c, src/keybindings.c, src/callbacks.c,
   src/callbacks.h, src/ui_utils.c, doc/geany.txt, doc/geany.html,
   geany.glade:
   Add Find Usage and Go to Tag items to Search menu for easier
   discovery.
 * tagmanager/tm_symbol.c:
   Fix possible NULL dereference.
 * HACKING:
   Add link to glade-2.12.2.tar.gz on geany.org.
 * doc/geany.txt, doc/geany.html:
   Mention the filetype wordchars setting can be overridden by the
   whitespace_chars filetypes.common setting.
 * src/highlighting.c, src/encodings.c, tagmanager/tm_file_entry.c:
   Remove NULL checks when calling g_free() (patch by Erik de Castro
   Lopo, thanks).
 * src/document.c:
   Show Save As when saving if the document filename doesn't have an
   absolute path, so command-line new files can be saved without a
   prompt, but file templates still prompt the user.


2010-09-09  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * src/build.c:
   Fix a memory leak. Based on input by Daniel Marjamäki. Thanks for the
   catch.

